Fixed resize issue by hiding overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,6 +41,7 @@ body {
   padding: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
   width: 100%;
+  overflow: hidden;
 }
 
 // .single-piece {
